--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <hearder></hearder>
     <body></body>
-    <h1>Hazuki's Portfolio</h1>
+    <h1>Welcome to Hazuki's Portfolio</h1>
     <img src="./Hazukiportrait.jpg" width="300"/>
 </html>
