--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="https://hazuki797.github.io/">Home</a></li>
+        <li><a href="https://hazuki797.github.io">Home</a></li>
         <li><a href="./projects_page.html">Projects</a></li>
         <li><a href="https://www.linkedin.com/in/hazuki-inoue-3b977942/">LinkedIn</a></li>
         <li><a href="https://github.com/hazuki797">Github</a></li>
