--- a/projects_page.html
+++ b/projects_page.html
@@ -25,7 +25,7 @@
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="./github project.html">Home</a></li>
+        <li><a href="./index.html">Home</a></li>
         <li><a href="./projects_page.html">Projects</a></li>
         <li><a href="https://www.linkedin.com/in/hazuki-inoue-3b977942/">LinkedIn</a></li>
         <li><a href="https://github.com/hazuki797">Github</a></li>
